# Isaac-2D

./: .gitattributes  CMakeLists.txt  README.md  bitbucket-pipelines.yml  cmake_CodeLite_Debug.sh
Isaac/: CMakeLists.txt  Isaac.sln  build_cmake.sh
Isaac/Isaac_CModel/: CMakeLists.txt  Isaac_CModel.vcxproj  Isaac_CModel.vcxproj.filters
Isaac/Isaac_CModel/Source/Code/: Animation.cpp  Button.cpp  CheckBox.cpp  Frame.cpp  GeoMap.cpp  Menu.cpp
Isaac/Isaac_CModel/Source/Include/: Animation.h  Button.h  CheckBox.h  Frame.h  GeoMap.h  Menu.h
Isaac/Isaac_Core/: CMakeLists.txt  Isaac_Core.vcxproj  Isaac_Core.vcxproj.filters
Isaac/Isaac_Core/Source/Code/: BlankScene.cpp  ComplexTrigger.cpp  Game.cpp  LibraryUitls.cpp  Orchestrator.cpp  ProcElemCollection.cpp  SceneCollection.cpp  SceneMachine.cpp  StateMachine.cpp  TransientDataCollection.cpp  TransitionCollection.cpp  TriggerCollection.cpp
Isaac/Isaac_Core/Source/Include/: BlankScene.h  ComplexTrigger.h  Game.h  IDynamicAspect.h  IDynamicScene.h  IListSmartCollection.h  IMapCollection.h  IMapSmartCollection.h  IProcessingElement.h  IScene.h  IStaticAspect.h  IStaticScene.h  ITrigger.h  LibraryUtils.h  Orchestrator.h  ProcElemCollection.h  SceneCollection.h  SceneMachine.h  StateMachine.h  TransientDataCollection.h  Transition.h  TransitionCollection.h  TriggerCollection.h
Isaac/Isaac_Foundation/: CMakeLists.txt  Isaac_Foundation.vcxproj  Isaac_Foundation.vcxproj.filters
Isaac/Isaac_Foundation/Source/Code/: BufferIPECollection.cpp  BufferIStateCollection.cpp  BufferITransientData..cpp  BufferITransitionCollection.cpp  BufferITriggerCollection.cpp  ProcElemCollection.cpp  SceneCollection.cpp  TransientDataCollection.cpp  TransitionCollection.cpp  TriggerCollection.cpp
Isaac/Isaac_Foundation/Source/Include/: BufferIPECollection.h  BufferIStateCollection.h  BufferITransientData.h  BufferITransitionCollection.h  BufferITriggerCollection.h  IDynamicAspect.h  IDynamicScene.h  IDynamicState.h  IListSmartCollection.h  IMapCollection.h  IMapSmartCollection.h  IPECollection.h  IProcessingElement.h  IScene.h  IState.h  IStateCollection.h  IStaticAspect.h  IStaticScene.h  IStaticState.h  ITransientData.h  ITransitionCollection.h  ITrigger.h  ITriggerCollection.h  ProcElemCollection.h  SceneCollection.h  TransientDataCollection.h  Transition.h  TransitionCollection.h  TriggerCollection.h
Isaac/Isaac_IModel/: CMakeLists.txt  Isaac_IModel.vcxproj  Isaac_IModel.vcxproj.filters
Isaac/Isaac_IModel/Source/Code/: IAnimation.cpp  IButton.cpp  ICheckBox.cpp  IFrame.cpp  IGeoMap.cpp  IMenu.cpp
Isaac/Isaac_IModel/Source/Include/: IAnimation.h  IButton.h  ICheckBox.h  IFrame.h  IGeoMap.h  IMenu.h
Isaac/Isaac_Loader/: CMakeLists.txt  Isaac_Loader.vcxproj  main.cpp
Isaac/Isaac_Model/: CMakeLists.txt
Isaac/Isaac_Model/Source/Code/: Button.cpp  CheckBox.cpp  Frame.cpp  IButton.cpp  ICheckBox.cpp  IFrame.cpp  IMenu.cpp  Menu.cpp  TextButton.cpp
Isaac/Isaac_Model/Source/Include/: Button.h  CheckBox.h  Frame.h  IButton.h  ICheckBox.h  IFrame.h  IMenu.h  Menu.h  TextButton.h
Isaac/Isaac_ThirdParty/SFML 2.1/lib/: readme.txt
Isaac/Isaac_ThirdParty/SFML 2.1/lib/Debug/: sfml-audio-d-2.ilk  sfml-audio-d.exp  sfml-audio-d.lib  sfml-graphics-d-2.ilk  sfml-graphics-d.exp  sfml-graphics-d.lib  sfml-main-d.lib  sfml-network-d-2.ilk  sfml-network-d.exp  sfml-network-d.lib  sfml-system-d-2.ilk  sfml-system-d.exp  sfml-system-d.lib  sfml-window-d-2.ilk  sfml-window-d.exp  sfml-window-d.lib
Isaac/Isaac_ThirdParty/SFML 2.1/lib/MinSizeRel/: sfml-audio.exp  sfml-audio.lib  sfml-graphics.exp  sfml-graphics.lib  sfml-main.lib  sfml-network.exp  sfml-network.lib  sfml-system.exp  sfml-system.lib  sfml-window.exp  sfml-window.lib
Isaac/Isaac_Triggers/: CMakeLists.txt  Isaac_Triggers.vcxproj  Isaac_Triggers.vcxproj.filters
Isaac/Isaac_Triggers/Source/Code/: ClickOnButton.cpp  ClickOnShape.cpp  ElementColorTrigger.cpp  ElementMouseTrigger.cpp  ElementPositionTrigger.cpp  ElementScaleTrigger.cpp  KeyPressTrigger.cpp  ManualTrigger.cpp  NumericTrigger.cpp  TimeTrigger.cpp
Isaac/Isaac_Triggers/Source/Include/: ClickOnButton.h  ClickOnShape.h  ElementColorTrigger.h  ElementMouseTrigger.h  ElementPositionTrigger.h  ElementScaleTrigger.h  KeyPressTrigger.h  ManualTrigger.h  NumericTrigger.h  TimeTrigger.h
Isaac/Isaac_TryOut/: CMakeLists.txt  Isaac_TryOut.vcxproj  Isaac_TryOut.vcxproj.filters
Isaac/Isaac_TryOut/Source/Code/: DynamicAspect.cpp  DynamicScene.cpp  DynamicState.cpp  Entry.cpp  PEOne.cpp  PEThree.cpp  PETwo.cpp  SceneOne.cpp  SceneThree.cpp  SceneTwo.cpp  StateOne.cpp  StateThree.cpp  StateTwo.cpp  StaticAspect.cpp
Isaac/Isaac_TryOut/Source/Include/: DynamicAspect.h  DynamicScene.h  DynamicState.h  Entry.h  PEOne.h  PEThree.h  PETwo.h  SceneOne.h  SceneThree.h  SceneTwo.h  StateOne.h  StateThree.h  StateTwo.h  StaticAspect.h
Isaac/common/: defines.h  readme.txt
Output/: run.sh
Output/Debug/: Isaac_CModel.exp  Isaac_CModel.ilk  Isaac_CModel.lib  Isaac_Core.exp  Isaac_Core.ilk  Isaac_Core.lib  Isaac_Foundation.exp  Isaac_Foundation.ilk  Isaac_Foundation.lib  Isaac_IModel.exp  Isaac_IModel.ilk  Isaac_IModel.lib  Isaac_Loader.exp  Isaac_Loader.ilk  Isaac_Loader.lib  Isaac_Model.exp  Isaac_Model.ilk  Isaac_Model.lib  Isaac_Triggers.exp  Isaac_Triggers.ilk  Isaac_Triggers.lib  Isaac_TryOut.exp  Isaac_TryOut.ilk  Isaac_TryOut.lib  run.bat
Output/Release/: Isaac_Core.exp  Isaac_Core.lib  Isaac_Foundation.exp  Isaac_Foundation.lib  Isaac_Loader.exp  Isaac_Loader.lib  Isaac_Triggers.exp  Isaac_Triggers.lib  Isaac_TryOut.exp  Isaac_TryOut.lib  run.bat
